Lab1_CloudFormation/route_tables.yaml
AWSTemplateFormatVersion: '2010-09-09'
Description: Create route tables for public and private subnets

Resources:
  PublicRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCID

  PrivateRouteTable:
    Type: AWS::EC2::RouteTable
    Properties:
      VpcId: !ImportValue VPCID

  PublicRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PublicRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !ImportValue InternetGatewayID

  PrivateRoute:
    Type: AWS::EC2::Route
    Properties:
      RouteTableId: !Ref PrivateRouteTable
      DestinationCidrBlock: 0.0.0.0/0
      NatGatewayId: !ImportValue NatGatewayID

Outputs:
  PublicRouteTableID:
    Description: Public Route Table ID
    Value: !Ref PublicRouteTable
  PrivateRouteTableID:
    Description: Private Route Table ID
    Value: !Ref PrivateRouteTable
